--- a/SnapshotsAppSignalR/Client/SnapshotsAppSignalR.Client.csproj
+++ b/SnapshotsAppSignalR/Client/SnapshotsAppSignalR.Client.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview2.20160.5" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Mono" Version="3.2.0-preview1.20067.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.3" />
+    <PackageReference Include="Syncfusion.Blazor" Version="18.1.0.44" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\SnapshotsAppSignalR.Shared.csproj" />
